--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:prettier": "prettier --write './src/**/*.{js,md}'",
+    "lint:eslint": "eslint --fix './src/**/*.{js,md}'",
+    "lint": "yarn lint:prettier && yarn lint:eslint"
   },
   "repository": {
     "type": "git",
     "url": "git@git.coding.net:varzy/leetcode-js.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier": "^1.15.3",
+    "prettier-eslint": "^8.8.2"
+  }
 }
