--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:prettier": "prettier --write './src/**/*.{js,md}'",
-    "lint:eslint": "eslint --fix './src/**/*.{js,md}'",
-    "lint": "yarn lint:prettier && yarn lint:eslint"
+    "lint": "prettier --write src/**/*.{js,md}"
   },
   "repository": {
     "type": "git",
@@ -16,13 +14,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.15.3",
-    "prettier-eslint": "^8.8.2"
+    "prettier": "^1.18.2"
   }
 }
