--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "prettier": "^1.18.2"
+  "devDependencies": {},
+  "dependencies": {
+    "prettier": "^2.0.5"
   }
 }
